chore: add EF and migrations

--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "server=localhost;port=3306;password=rootpw;Uid=root;database=mukurueppdb"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
