--- a/HotelListing.API/HotelListing.API.csproj
+++ b/HotelListing.API/HotelListing.API.csproj
@@ -8,6 +8,11 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.1.1-dev-00293" />
         <PackageReference Include="Serilog.Expressions" Version="3.4.2-dev-00119" />
         <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3-dev-00260" />
