--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 volumes:
   datadrive:
     external: false
+  mysql_db:
 
 services:
   seq:
@@ -31,3 +32,18 @@ services:
       - traefik.frontend.rule=Host:seq.<snip>.com
       - traefik.docker.network=web
       - traefik.port=80
+        
+  # Database instance
+  mysql:
+    image: mysql:latest
+    volumes:
+      - mysql_db:/var/lib/mysql
+      - ./_MySQL_Init_Script:/docker-entrypoint-initdb.d
+    restart: always
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpw
+      MYSQL_DATABASE: mukurueppdb
+      MYSQL_USER: mukurueppdbuser
+      MYSQL_PASSWORD: userpw
