chore: add identity setup

--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -24,5 +24,11 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelLiatingAPIClient",
+    "DurationInMinutes": 10,
+    "key": "YourSuperSecretKey"
+  }
 }
